--- a/BayesBinMix_models.qmd
+++ b/BayesBinMix_models.qmd
@@ -4,6 +4,7 @@ author: "Carmen B. Rodriguez"
 format: 
   html:
     self-contained: TRUE
+    toc: true
 editor: visual
 ---
 
@@ -27,6 +28,7 @@ library(coda)
 library(DescTools)
 library(MCMCvis)
 library(knitr)
+library(forcats)
 ```
 
 ```{r}
@@ -35,6 +37,8 @@ censusdata_bin <- readRDS("./censusdata_bin.rds")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
 ```
+
+The Multivariate Bernoulli Mixture Model
 
 The dimensionality of the multivariate distribution is equal to $d = 14$.
 
@@ -50,17 +54,28 @@ $$\theta_{kj} \sim \text{Beta}(\alpha=1, \beta=1)$$
 
 We will run models with different values of $K_{max}$ . That is, we will look at output where the upper bound on $K$ is `K= c(5,10,15)` .
 
+**A few notes:**
+
+-   We only show patterns for ACS 2006-2010 and ACS 2011-2015 when $K_{max} = 10$, resulting in a most probable model (henceforth refered as mapK) of mapK = 4.
+
+-    Tried to add labels/descriptions to each cluster based on success probabilities of the included neighborhood SES variables.
+
+-   
+
 ```{r}
 #Load model results--will be stored in GitHub
 res_acs10<- readRDS("./ACS10_results.rds")
-res_5<-res_acs10[[1]]
-res_10<-res_acs10[[3]]
-res_15<-res_acs10[[5]]
+res_acs10_10<-res_acs10[[3]]
+res_acs10_15<-res_acs10[[5]]
+
+#DIC calculation
+
+
+
 ```
 
 | **Kmax** | **Cluster Prior**     | **Most Probable K (mapK)** | **DIC** |
 |----------|-----------------------|----------------------------|---------|
-| 5        | Truncated Poisson (1) | 5                          |         |
 | 10       | Truncated Poisson (1) | 4                          |         |
 | 15       | Truncated Poisson (1) | 6                          |         |
 
@@ -73,22 +88,19 @@ res_15<-res_acs10[[5]]
 res_all <- readRDS("./ACS15_19_results.rds")
 
 #ACS 2015
-res_acs15_5<-res_all$res_acs15_5
 res_acs15_10<-res_all$res_acs15_10
 res_acs15_15<-res_all$res_acs15_15
 
-Mode(res_acs15_5$K.mcmc)[1]
 Mode(res_acs15_10$K.mcmc)[1]
 Mode(res_acs15_15$K.mcmc)[1]
 ```
 
 | **Kmax** | **Cluster Prior**     | **Most Probable K (mapK)** |
 |----------|-----------------------|----------------------------|
-| 5        | Truncated Poisson (1) | 5                          |
 | 10       | Truncated Poisson (1) | 4                          |
 | 15       | Truncated Poisson (1) | 8                          |
 
-: **Table 2.** Results ACS 2015
+: **Table 2.** Results ACS 2011-2015
 
 ```{r}
 #| echo: true
@@ -96,65 +108,25 @@ Mode(res_acs15_15$K.mcmc)[1]
 #| output: false
 
 #ACS 2019
-res_acs19_5<-res_all$res_acs19_5
 res_acs19_10<-res_all$res_acs19_10
 res_acs19_15<-res_all$res_acs19_15
 
-Mode(res_acs19_5$K.mcmc)[1]
 Mode(res_acs19_10$K.mcmc)[1]
 Mode(res_acs19_15$K.mcmc)[1]
 ```
 
 | **Kmax** | **Cluster Prior**     | **Most Probable K (mapK)** |
 |----------|-----------------------|----------------------------|
-| 5        | Truncated Poisson (1) | 5                          |
 | 10       | Truncated Poisson (1) | 6                          |
 | 15       | Truncated Poisson (1) | 8                          |
 
-: **Table 3.** Results ACS 2019
-
-### Explore output
-
-##### (1) Trace plots-selecting a cluster at random for examination- Example when Kmax = 5
-
-```{r}
-#| eval: false
-set.seed(2020) #year-month-day
-#-------Explore output---------
-mapK<-Mode(res_5$K.mcmc)[1]  #tells you mapK
-n_ses<-ncol(censusdata_bin$acs5_2010_bin)
-
-## (1) Trace plots for convergence exploration -- select a cluster at random
-clusterran<-sample(1:mapK, size = 1)
-clustersel<-c(paste0("theta", sep=".", clusterran, sep=".",1:n_ses), paste("p", clusterran, sep = "."))
-params_est<-res_5$parameters.ecr.mcmc
-
-#Filename is for most probable K,not the cluster being plotted
-MCMCtrace(params_est[,clustersel], filename = paste("MCMCtrace_mapK", mapK, sep = "_"), wd = "./Figures")
-```
-
-##### (2) Illustrate the sampled values of K per chain according to the Poisson and uniform prior distribution using data from K.allChains--- This we can do last if necessary, otherwise we don't run it
-
-```{r}
-#| eval: false
-poiKallchains<-read.table(file = "/homes6/carmen/Other projects/acs10_res_poiunif_demo/K.allChains.txt",header = T)
-
-poiKallchains$m <-as.numeric(row.names(poiKallchains))
-poiKallchains1<-poiKallchains %>% pivot_longer(cols = 1:4, names_to ="Chain", values_to = "K")
-#this plot shows the generated values of K per heated chain-- note chain 1 is the original (^1)
-poiKallchains1 %>% ggplot(aes(x = m, y = K, col = as.factor(Chain))) + 
-  geom_line() + 
-  ggtitle("MC^3 Sampler Poi-Unif") + 
-  xlab("mcmc cycle")
-
-```
+: **Table 3.** Results ACS 2015-2019
 
 ### **Plots** (Patterns for ACS 2006-2010)
 
 ```{r}
 #Import functions from plots.R
 source("plots.R")
-library(wesanderson)
 library(viridis)
 sesvars<-c("Two People Per Room","Lack of complete Plumbing", "Median Household Income", ">= Bacherlor's Degree", "Below Poverty Line", "< High School",
            "Female Household", ">= High School","No Vehicle","Owner", "Renter", "Unemployment","White Collar Occupation", "SNAP Benefits")
@@ -166,119 +138,98 @@ custom_colors <- c("#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd",
                    "#8c564b", "#e377c2", "#7f7f7f", "#bcbd22", "#17becf",
                    "#ff0000", "#00ff00", "#0000ff", "#ffff00")
 
-# Generate 14 pastel colors
+group_cols<-c("#1f77b4","#2ca02c","salmon1", "#bcbd22")
+
+
+# Generate 14 pastel colors for ungrouped graph
 pastel_palette1 <- generate_pastel_colors(14)
-pastel_palette2<-generate_pastel_colors(4)
+
 
 ```
 
 ```{r}
-#| layout-ncol: 2
-#| fig-width: 10
-#| fig-height: 10
-#| fig-cap: 
-#|   - "Individual Neighborhood SES variables"
-#|   -  "Grouped Neighborhood  SES variables"
-#Kmax = 5
-mapK<-Mode(res_5$K.mcmc)[1]  #tells you mapK
-fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
-dat_5<-preparedat_fig(res_5,mapK,sesvars)
-p_5_indiv<-plot_thetakj_indiv(prob_est_long = dat_5, mapK,color_palette = pastel_palette1, fig_title)
-p_5_group<-plot_thetakj_group(prob_est_long = dat_5, mapK,color_palette = pastel_palette2, fig_title)
-
-p_5_indiv
-p_5_group
-```
-
-```{r}
-#Class probabilities
-stats<-cbind(summary(res_5$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_5$parameters.ecr.mcmc)$quantiles[,c(1,5)])
-
-tail(stats, mapK) %>% kable()
-
-```
-
-```{r}
-#| layout-ncol: 2
+#| layout-ncol: 1
 #| fig-width: 10
 #| fig-height: 10
 #| fig-cap: 
 #|   - "Individual Neighborhood SES variables"
 #|   -  "Grouped Neighborhood  SES variables"
 #Kmax = 10
-mapK<-Mode(res_10$K.mcmc)[1]  #tells you mapK
+mapK<-Mode(res_acs10_10$K.mcmc)[1]  #tells you mapK
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
-dat_10<-preparedat_fig(res_10,mapK,sesvars)
+dat_10<-preparedat_fig(res_acs10_10,mapK,sesvars)
 p_10_indiv<-plot_thetakj_indiv(prob_est_long = dat_10, mapK,color_palette = pastel_palette1, fig_title)
-p_10_group<-plot_thetakj_group(prob_est_long = dat_10, mapK,color_palette = pastel_palette2, fig_title)
+#p_10_group1<-plot_thetakj_group1(prob_est_long = dat_10, mapK,color_palette = group_cols, fig_title)
+p_10_group<-plot_thetakj_group(prob_est_long = dat_10, mapK,color_palette = group_cols, fig_title)
 
 p_10_indiv
 p_10_group
+#p_10_group1
+
+
+#to describe patterns
+#dat_10 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
 
 ```
 
+#### Observed patterns description \-- to be discussed with Briana and Stephanie
+
+-   **Cluster 1 :** This cluster has higher success probabilities for SES variables like: higher education level, home ownership, white-collar occupations, and higher median income.
+
+    -   ***Summarize this as possibly the "High SES" category.***
+
+-   **Cluster 2:** Higher success probabilities for households with 2 or more occupants per room, \< HS education, renters, no complete plumbing and unemployment.
+
+    -   ***Summarize this as possibly the "Med-Low SES" category.***
+
+-   **Cluster 3:** Higher success probabilities for \< HS education, SNAP benefits, female households, household owners, unemployment.
+
+    -   ***Summarize this as possibly the "Low SES" category.***
+
+-   **Cluster 4:** Higher success probabilities for renters, higher education, white collar occupation, low success probability for unemployment, SNAP benefits and female household.
+
+    -   ***Summarize this as possibly the "Medium SES" category.***
+
+#### **Cluster weights:**
+
 ```{r}
 #Class probabilities
-stats<-cbind(summary(res_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+stats<-cbind(summary(res_acs10_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs10_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
 tail(stats, mapK) %>% kable()
 
 ```
 
 ```{r}
-#| layout-ncol: 2
+#| eval: false
+#| layout-ncol: 1
 #| fig-width: 10
 #| fig-height: 10
 #| fig-cap: 
 #|   - "Individual Neighborhood SES variables"
 #|   -  "Grouped Neighborhood  SES variables"
 #Kmax = 15
-mapK<-Mode(res_15$K.mcmc)[1]  #tells you mapK
+mapK<-Mode(res_acs10_15$K.mcmc)[1]  #tells you mapK
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
-dat_15<-preparedat_fig(res_15,mapK,sesvars)
+dat_15<-preparedat_fig(res_acs10_15,mapK,sesvars)
 p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
-p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = pastel_palette2, fig_title)
+p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
 p_15_indiv
 p_15_group
 ```
 
 ```{r}
+#| eval: false
 #Class probabilities
-stats<-cbind(summary(res_15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+stats<-cbind(summary(res_acs10_15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs10_15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
 tail(stats, mapK) %>% kable()
 ```
 
-### **Plots** (Patterns for ACS 2015)
+### **Plots** (Patterns for ACS 2011-2015)
 
 ```{r}
-#| layout-ncol: 2
-#| fig-width: 10
-#| fig-height: 10
-#| fig-cap: 
-#|   - "Individual Neighborhood SES variables"
-#|   -  "Grouped Neighborhood  SES variables"
-#Kmax = 5
-mapK<-Mode(res_acs15_5$K.mcmc)[1]  #tells you mapK
-fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
-dat_5<-preparedat_fig(res_acs15_5,mapK,sesvars)
-p_5_indiv<-plot_thetakj_indiv(prob_est_long = dat_5, mapK,color_palette = pastel_palette1, fig_title)
-p_5_group<-plot_thetakj_group(prob_est_long = dat_5, mapK,color_palette = pastel_palette2, fig_title)
-
-p_5_indiv
-p_5_group
-```
-
-```{r}
-#Class probabilities
-stats<-cbind(summary(res_acs15_5$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15_5$parameters.ecr.mcmc)$quantiles[,c(1,5)])
-
-tail(stats, mapK) %>% kable()
-
-```
-
-```{r}
-#| layout-ncol: 2
+#| layout-ncol: 1
 #| fig-width: 10
 #| fig-height: 10
 #| fig-cap: 
@@ -287,13 +238,36 @@ tail(stats, mapK) %>% kable()
 #Kmax = 10
 mapK<-Mode(res_acs15_10$K.mcmc)[1]  #tells you mapK
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
-dat_10<-preparedat_fig(res_acs15_10,mapK,sesvars)
-p_10_indiv<-plot_thetakj_indiv(prob_est_long = dat_10, mapK,color_palette = pastel_palette1, fig_title)
-p_10_group<-plot_thetakj_group(prob_est_long = dat_10, mapK,color_palette = pastel_palette2, fig_title)
+dat_15<-preparedat_fig(res_acs15_10,mapK,sesvars)
+p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
+p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
 
-p_10_indiv
-p_10_group
+p_15_indiv
+p_15_group
+
+#to describe patterns
+#dat_15 %>% group_by(cluster) %>% arrange(theta_kj,.by_group = T)
 ```
+
+#### Observed patterns description \-- to be discussed with Briana and Stephanie
+
+-   **Cluster 1 :** Higher success probabilities for households with 2 or more occupants per room, \< HS education, renters, and unemployment.
+
+    -   ***Summarize this as possibly the " Medium low SES" category.***
+
+-   **Cluster 2:** Higher success probabilities for high education, home ownership, white collar occupation
+
+    -   ***Summarize this as possibly the "High SES" category***
+
+-   **Cluster 3:** Higher success probabilities for education , renter, white collar occupation, and households with 2 or more occupants per room.
+
+    -   ***Summarize this as possibly the " Medium SES" category.***
+
+-   **Cluster 4:** Higher success probabilities for owners, unemployment, lower educational levels, female household.
+
+    -   ***Summarize this as possibly the "Low SES " category.***
+
+#### **Cluster weights:**
 
 ```{r}
 #Class probabilities
@@ -304,7 +278,8 @@ tail(stats, mapK) %>% kable()
 ```
 
 ```{r}
-#| layout-ncol: 2
+#| eval: false
+#| layout-ncol: 1
 #| fig-width: 10
 #| fig-height: 10
 #| fig-cap: 
@@ -315,15 +290,94 @@ mapK<-Mode(res_acs15_15$K.mcmc)[1]  #tells you mapK
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
 dat_15<-preparedat_fig(res_acs15_15,mapK,sesvars)
 p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
-p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = pastel_palette2, fig_title)
+p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
 p_15_indiv
 p_15_group
 
 ```
 
 ```{r}
+#| eval: false
 #Class probabilities
 stats<-cbind(summary(res_acs15_15$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15_15$parameters.ecr.mcmc)$quantiles[,c(1,5)])
 
 tail(stats, mapK) %>% kable()
 ```
+
+### How deterministic is the model?
+
+Need to look more into this. Not sure this is the best way to show it.
+
+```{r}
+#For ACS 2010 and mapK = 4
+classificationprobs_10<-res_acs10_10$classificationProbabilities.ecr
+classificationprobs_10$CT<-row.names(classificationprobs_10)
+
+#Class probabilities
+stats<-cbind(summary(res_acs10_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs10_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+
+tail(stats, mapK) %>% kable()
+
+colnames(classificationprobs_10)<-c("cluster 1: 0.29", "cluster 2: 0.33", "cluster 3: 0.21", "cluster 4: 0.17", "CT")
+
+classificationprobs_10_l<-classificationprobs_10 %>% pivot_longer(cols =1:4,names_to = "Cluster", values_to = "Probability")
+
+
+classificationprobs_10_l%>%  ggplot(aes(x=Cluster, y= Probability, fill=Cluster)) +
+  geom_boxplot() + labs(fill = "Cluster Assignment", y = "Classification Probability after ECR algorithm", x= "Census Tract Cluster Assignment")
+
+
+#For ACS 2015 and mapK = 4
+classificationprobs_15<-res_acs15_10$classificationProbabilities.ecr
+classificationprobs_15$CT<-row.names(classificationprobs_15)
+
+
+stats<-cbind(summary(res_acs15_10$parameters.ecr.mcmc)$statistics[,c(1,2)], summary(res_acs15_10$parameters.ecr.mcmc)$quantiles[,c(1,5)])
+
+tail(stats, mapK) %>% kable()
+
+
+colnames(classificationprobs_15)<-c("cluster 1: 0.2956", "cluster 2: 0.2960", "cluster 3: 0.2044", "cluster 4: 0.2038", "CT")
+
+summary(classificationprobs_15$`cluster 1: 0.2956`)
+summary(classificationprobs_15$`cluster 2: 0.2960`)
+summary(classificationprobs_15$`cluster 3: 0.2044`)
+summary(classificationprobs_15$`cluster 4: 0.2038`)
+
+
+classificationprobs_15_l<-classificationprobs_15 %>% pivot_longer(cols =1:4,names_to = "Cluster", values_to = "Probability")
+
+classificationprobs_15_l%>%  ggplot(aes(x=Cluster, y= Probability, fill=Cluster)) +
+  geom_boxplot() + labs(fill = "Cluster Assignment", y = "Classification Probability after ECR algorithm", x= "Census Tract Cluster Assignment")
+
+```
+
+### Concordance-discordance table
+
+Through this assessment we can get an idea of cluster mobility or how census tracts changed over time.
+
+```{r}
+#For this we will look at the output for clusterMembershipPerMethod
+ACS10_clusters<-res_acs10_10$clusterMembershipPerMethod$ECR
+ACS15_clusters<-res_acs15_10$clusterMembershipPerMethod$ECR
+
+table(ACS10_clusters, ACS15_clusters) 
+prop.table(table(ACS10_clusters, ACS15_clusters) )
+
+library(gmodels)
+CrossTable(ACS10_clusters, ACS15_clusters, expected = F, prop.r = F)
+```
+
+The overall distribution of the clusters in terms of proportion of CT assigned did not change as much, but there was mobility across clusters when comparing the two surveys. For example, 89% of census tracts classified as "cluster 2" in 2010 5-year ACS were classified as cluster 1 in 5-year ACS for 2011-2015. Similarly, majority of cluster 4 in 2010 (\~70%) were classified as cluster 3 in 2015.
+
+To further understand these shifts we will need to look at the cluster labels or definitions. From the pattern descriptions above we have the following:
+
+-   High -\> High: 365
+
+-   Low -\> Low: 216
+
+-   Med -\> Med: 212
+
+-   Med-Low -\> Med-Low: 390
+
+**This gives a total of 1183/1478 concordant classification.**
