--- a/BayesBinMix_models_new.qmd
+++ b/BayesBinMix_models_new.qmd
@@ -31,28 +31,15 @@ library(forcats)
 library(gmodels)
 ```
 
-The Multivariate Bernoulli Mixture Model
-
-The dimensionality of the multivariate distribution is equal to $d = 14$.
-
-The following prior assumptions are imposed
-
-$$K \sim \text{Truncated Poisson}(\lambda = 1)$$
-
-$$p|K \sim \text{Dirichlet}(\gamma_1,..., \gamma_K)$$ We set $\gamma_1=...= \gamma_K =\gamma = 1/50$. We do this so that the prior distribution on the weight distribution of a mixture with $K$ components is chosen in such a way that the number of clusters in the data is random and is allowed to be smaller than $K$ with high probability.<https://link.springer.com/article/10.1007/s11634-018-0329-y>
-
-$$\theta_{kj} \sim \text{Beta}(\alpha=1, \beta=1)$$
-
 ```{r}
 #Load census data and results from latest model
 censusdata_bin <- readRDS("./censusdata_bin_rownames.rds")
 names(censusdata_bin) <- c("acs5_2010_bin","acs5_2015_bin","acs5_2019_bin")
 
-#res_all <- readRDS("./ACSall_results_withburnin_2.29.rds")
-res_all<-readRDS("./ACSall_results_withburnin_2.29.rds")
-res_acs10<-res_all$res_acs10_10
-res_acs15<-res_all$res_acs15_10
-res_acs19<-res_all$res_acs19_10
+res_all<-readRDS("./ACSall_3.10.24.rds")
+res_acs10<-res_all$res_acs10_50
+res_acs15<-res_all$res_acs15_50
+res_acs19<-res_all$res_acs19_50
 ```
 
 ```{r}
@@ -61,16 +48,6 @@ print(res_acs10)
 print(res_acs15)
 print(res_acs19)
 ```
-
-| ACS Survey Year |                     $$                                                                                                                                                                                                    
-                                                                                                                                                                                                                            K_{max}           
-                                                                                                                                                                                                                                        $$    |   7   |   8   |     9     |  10   |
-|--------------|:----------------:|:----:|:----:|:----:|:----:|
-| 2006-2010       |                                                                                                            10                                                                                                             |   0   | 0.112 | **0.476** | 0.412 |
-| 2011-2015       |                                                                                                            10                                                                                                             | 0.042 | 0.404 | **0.424** | 0.130 |
-| 2015-2019       |                                                                                                            10                                                                                                             | 0.032 | 0.258 | **0.420** | 0.290 |
-
-: **Table 1.** Estimated posterior distribution of the number of clusters for each survey wave.
 
 ### **Plots** and Patterns for ACS 2006-2010
 
@@ -103,7 +80,7 @@ pastel_palette1 <- generate_pastel_colors(14)
 #| fig-cap: 
 #|   - "Individual Neighborhood SES variables"
 #|   -  "Neighborhood  SES variables Domains"
-#Kmax = 10
+#Kmax = 50
 mapK<-Mode(res_acs10$K.mcmc)[1]  #tells you mapK
 
 fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
@@ -114,24 +91,28 @@ p_10_indiv<-plot_thetakj_indiv(prob_est_long = dat_10, mapK,color_palette = past
 
 p_10_group<-plot_thetakj_group(prob_est_long = dat_10, mapK,color_palette = group_cols, fig_title)
 
+p_10_heatmap<- plot_thetakj_heatmap(prob_est_long = dat_10, fig_title)
+p_10_heatmap2<- plot_thetakj_heatmap_r(prob_est_long = dat_10, fig_title)
+
 #p_10_group_flipped<-plot_thetakj_group_flipped(prob_est_long = dat_10, mapK,color_palette = group_cols, fig_title)
 
 
 p_10_indiv
 p_10_group
+p_10_heatmap
 
 #to describe patterns
 #dat_10 %>% group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T)
 
-dat_10_1<-dat_10 %>%  mutate(hml= case_when(
-                             theta_kj >=0.70 ~ 1,
-                             theta_kj< 0.70 & theta_kj >=0.4 ~ 2,
-                             theta_kj < 0.4 ~ 3,))
-
-dat_10_1$hml <- factor(dat_10_1$hml, levels = 1:3, labels = c("High", "Med", "Low"))
-
-
-out<-dat_10_1 %>%  group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T) %>% select( cluster, NSES_VARS, theta_kj,hml)
+# dat_10_1<-dat_10 %>%  mutate(hml= case_when(
+#                              theta_kj >=0.70 ~ 1,
+#                              theta_kj< 0.70 & theta_kj >=0.4 ~ 2,
+#                              theta_kj < 0.4 ~ 3,))
+# 
+# dat_10_1$hml <- factor(dat_10_1$hml, levels = 1:3, labels = c("High", "Med", "Low"))
+# 
+# 
+# out<-dat_10_1 %>%  group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T) %>% select( cluster, NSES_VARS, theta_kj,hml)
 
 
 ```
@@ -166,8 +147,8 @@ classificationprobs_10$ClusterAssignment<- factor(classificationprobs_10$Cluster
 
 dat10_clusters<- classificationprobs_10 %>% select(GEOID,ClusterAssignment, maxProb)
 
-#agedist<-load("./census_age_dist.RData")
-agedist<-load("/Users/carmenrodriguez/Desktop/Research Projects/Census Data/census_age_dist.RData")
+agedist<-load("./census_age_dist.RData")
+#agedist<-load("/Users/carmenrodriguez/Desktop/Research Projects/Census Data/census_age_dist.RData")
 
 #merge age dist with cluster informaiton-- these are proportions
 merged10<- merge(dat10_clusters, agedist10_wide, by= "GEOID")
@@ -208,9 +189,12 @@ fig_title = paste("Success Probabilities when mapK=", mapK, sep="")
 dat_15<-preparedat_fig(res_acs15,mapK,sesvars)
 p_15_indiv<-plot_thetakj_indiv(prob_est_long = dat_15, mapK,color_palette = pastel_palette1, fig_title)
 p_15_group<-plot_thetakj_group(prob_est_long = dat_15, mapK,color_palette = group_cols, fig_title)
+p_15_heatmap<- plot_thetakj_heatmap(prob_est_long = dat_15, fig_title)
 
-p_15_indiv
+#p_15_indiv
 p_15_group
+p_15_heatmap
+
 
 #to describe patterns
 dat_15 %>% group_by(cluster) %>% arrange(desc(theta_kj),.by_group = T)
